fix issue with navbar overflowing onto content under some circumstances when manu nav bar items exist or if the screen width is resized down

--- a/src/plonetheme/booster/theme/less/booster.css
+++ b/src/plonetheme/booster/theme/less/booster.css
@@ -44,7 +44,6 @@ h1, h2, h3, h4, h5, h6 {
   float: left;
   width: 100%;
   position: relative;
-  position: absolute;
   z-index: 99;
   top: 0; }
   #fh5co-header > .navbar {
