--- a/src/plonetheme/booster/theme/less/partials/base.less
+++ b/src/plonetheme/booster/theme/less/partials/base.less
@@ -8,7 +8,7 @@
 
 body{
     font-family: @brand-font-family;
-    padding-top: 63px;
+nav bar items exist or if the screen width is resized down
     color: @brand-darker;
     font-weight: 400;
 }
